Metodo de consultas de cars en el api

--- a/autoinnovationlabtest.API/appsettings.json
+++ b/autoinnovationlabtest.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(local)\\JVMSSQL;Database=AutoInnovationLabDB;User Id=sa;password=3SQU3L3T0;Trusted_Connection=False;MultipleActiveResultSets=true"
+  }
 }
