--- a/autoinnovationlabtest.Web/autoinnovationlabtest.Web.csproj
+++ b/autoinnovationlabtest.Web/autoinnovationlabtest.Web.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\autoinnovationlabtest.Common\autoinnovationlabtest.Common.csproj" />
+  </ItemGroup>
+
 </Project>
