--- a/autoinnovationlabtest.Movil/autoinnovationlabtest.Movil/autoinnovationlabtest.Movil.csproj
+++ b/autoinnovationlabtest.Movil/autoinnovationlabtest.Movil/autoinnovationlabtest.Movil.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\CarPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\CarsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
